--- a/v1/src/pages/Appointment.css
+++ b/v1/src/pages/Appointment.css
@@ -1,92 +1,109 @@
 /* Appointment.css */
 .appointment-container {
-    display: flex;
-    flex-direction: column;
-    /* Change to column direction */
-    /* align-items: center; Center horizontally */
-    margin-top: 0px;
-    column-gap: 100px;
-    /* Adjust the top margin as needed */
-    width: 100%;
-    /* Make the button width 100% */
-    border-radius: 5px;
-    
+  display: flex;
+  flex-direction: column;
+  /* Change to column direction */
+  /* align-items: center; Center horizontally */
+  margin-top: 0px;
+  /* Adjust the top margin as needed */
+  width: 100%;
+  /* Make the button width 100% */
+  border-radius: 5px;
+
+
 }
+
 .appointment-list-container {
-    display: flex;
-    flex-direction: row;
-    /* Change to column direction */
-    /* align-items: center; Center horizontally */
-    margin-top: 0px;
-
+  display: flex;
+  flex-direction: row;
+  /* Change to column direction */
+  /* align-items: center; Center horizontally */
+  margin-top: 0px;
 }
-.add-appointment-button {
-    background-color: #1d4ed8;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    margin-top: 10px;
-    /* Adjust the top margin as needed */
-    cursor: pointer;
-    width: 100%;
-    /* Make the button width 100% */
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 
+.selected-appointment-details {
+  width: 100%;
+  height: auto;
+  /* Ensure the table takes the full width */
+  overflow-x: auto;
+  /* Add horizontal scroll if needed */
 }
+
 
 .calendar-container {
-    margin-bottom: 20px;
-    margin-top: 10px;
-    margin-left: 10px;
+  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-left: 20px;
+  width: auto;
+  height: auto;
+}
+
+
+.add-appointment-button {
+  background-color: #1d4ed8;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  margin-top: 10px;
+  /* Adjust the top margin as needed */
+  cursor: pointer;
+  width: 100%;
+  /* Make the button width 100% */
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+
 }
 
 
 
 .add-appointment-button:hover {
-    background-color: #0056b3;
+  background-color: #0056b3;
 }
 
+
 .popup {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-  }
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
 
 /* Popup styles */
 .popup-content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    position: relative;
-    width: 80%;
-    max-width: 500px;
-    overflow-y: auto;
-  }
-  
-  .close-popup-button {
-    background-color: #1d4ed8;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    position: absolute;
-    top: 10px; /* Adjust top position as needed */
-    right: 10px; /* Adjust right position as needed */
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  }
-  
-  .close-popup-button:hover {
-    background-color: #0056b3;
-  }
-  
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+  width: 80%;
+  max-width: 500px;
+  overflow-y: auto;
+  /* Add vertical scroll if needed */
+  overflow-x: hidden;
+}
+
+.close-popup-button {
+  background-color: #1d4ed8;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  /* Adjust top position as needed */
+  right: 10px;
+  /* Adjust right position as needed */
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.close-popup-button:hover {
+  background-color: #0056b3;
+}
